# cognitive-load-manager

./: .gitignore  Dockerfile  README.md  blog.md  inference.py  models.py  openai_inspect.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  reward_curve.json  training_loop.py  validate_submission.py
.github/workflows/: check-file-size.yml  sync-to-hub.yml
backend/: main.py  requirements.txt
baseline/: inference.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  TrainingDashboard.jsx
grader/: __init__.py  clm_graders.py
server/: app.py
tasks/: graders.py
tests/: test_clm.py
training scripts/: CLM_GRPO_Training.ipynb  reward_curve_full.json
